--- a/Lesson7-8/css/style.css
+++ b/Lesson7-8/css/style.css
@@ -109,27 +109,23 @@ margin-left: 0;
   margin-right: 0;
 }
 
-.menu{
-  overflow: hidden;
-  padding-right: 1px;
+.main__item {
+  padding: 0 0px 5px 5px;
+  margin: 0px 0% 0 7.3%;
+  float: left;
+  list-style: none;
 }
 
-.menu__item{
-  float: right;
-  margin-left: 52px;
-}
-
-.menu__link{
-  text-decoration: none;
+.main__link {
+  color: #fff;
   font-family: LeagueGothic, Tahoma, sans-serif;
-  text-transform: uppercase;
   font-size: 24px;
   text-decoration: none;
-  color: #fff;
   text-shadow: 0px 2px 1px #000;
+  text-transform: uppercase;
 }
 
-.menu__item:hover{
+.main__item:hover{
   border-bottom: 2px solid #edbfff;
 }
 
