--- a/Lesson7-8/css/style.css
+++ b/Lesson7-8/css/style.css
@@ -1,4 +1,4 @@
-﻿@import url(http://fonts.googleapis.com/css?family=Varela+Round);
+@import url(http://fonts.googleapis.com/css?family=Varela+Round);
 
 .clearfix:after {
   content: "";
@@ -785,6 +785,10 @@ header .main {
   margin: 0 6% 0 0px;
 }
 
+.main__item:hover{
+  border-bottom: 2px solid #edbfff;
+}
+
 .news {
   margin: 124px 0 0 0;
 }
@@ -1014,6 +1018,9 @@ footer {
   font-size: 20px;
 }
 
+.main__foot:hover{
+  border-bottom: 2px solid #edbfff;
+}
 .designed {
 margin: 0;
 position: absolute;
@@ -1247,8 +1254,8 @@ main {
 }
 
 .pingbuller__text {
-  margin-top: 16px;
-  max-height: 168px;
+  margin-top: 15px;
+  max-height: 170px;
   overflow: hidden;
 }
 
@@ -1266,13 +1273,13 @@ main {
 }
 
 .updates__h2 {
-  max-height: 20px;
+  max-height: 18px;
   overflow: hidden;
   letter-spacing: 0.08px;
 }
 
 .updates__p {
-  max-height: 20px;
+  max-height: 18px;
   overflow: hidden;
 }
 
@@ -1333,7 +1340,7 @@ overflow: hidden;
 }
 
 .ncat__h1 {
-font-size: 31px;
+float: none;
 }
 
 .ncat__h2 {
@@ -1578,7 +1585,7 @@ main {
 }
 
 .updates {
-  width: 90%;
+  width: 95%;
   float: none;
   position: absolute;
   top: 436px;
@@ -1586,13 +1593,14 @@ main {
 }
 
 .updates__h2 {
-  max-height: 21px;
+  max-height: 18px;
+  max-width: 50%;
   overflow: hidden;
   letter-spacing: 0.05px;
 }
 
 .updates__p {
-  max-height: 21px;
+  max-height: 18px;
   overflow: hidden;
 }
 
