--- a/Lesson9/css/style.css
+++ b/Lesson9/css/style.css
@@ -100,23 +100,23 @@ margin-left: 0;
   margin-right: 0;
 }
 .main__item {
-  padding: 0 0px 5px 5px;
-  margin: 0px 0% 0 7%;
+  padding: 0 0px 4px 4px;
+  margin: 0px 0% 0 6.3%;
   float: left;
   list-style: none;
 }
+
 .main__link {
   color: #fff;
-  font-family: LeagueGothic;
-  font-size: 24px;
+  font-family: LeagueGothic, Tahoma, sans-serif;
+  font-size: 23.5px;
   text-decoration: none;
-  text-shadow: 0 2px 1px #000;
+  text-shadow: 0px 2px 1px #000;
   text-transform: uppercase;
 }
-.active {
-  padding: 0 5px 2px 5px;
-  border-bottom: 2px solid pink;
-  margin-right: -5px;
+
+.main__item:hover{
+  border-bottom: 2px solid #edbfff;
 }
 .news {
   display: block;
