--- a/Lesson9/css/style.css
+++ b/Lesson9/css/style.css
@@ -1,5 +1,8 @@
 @import url(http://fonts.googleapis.com/css?family=Varela+Round);
-
+* {
+margin: 0;
+padding: 0;
+}
 .clearfix:after {
   content: "";
   display: block;
