--- a/JS9-10/css/style.css
+++ b/JS9-10/css/style.css
@@ -16,9 +16,9 @@ body {
 .navbar {
     padding: 0;
     height: 40px;
-    background: -webkit-linear-gradient(bottom, #444343, #5e5e5e);
-    background: -o-linear-gradient(bottom, #444343, #5e5e5e);
-    background: linear-gradient(to top, #444343, #5e5e5e);
+    background: -webkit-linear-gradient(left, rgba(179,220,237,1) 0%, rgba(41,184,229,1) 50%, rgba(188,224,238,1) 100%);
+    background: -o-linear-gradient(left, rgba(179,220,237,1) 0%, rgba(41,184,229,1) 50%, rgba(188,224,238,1) 100%);
+    background: linear-gradient(to right, rgba(179,220,237,1) 0%, rgba(41,184,229,1) 50%, rgba(188,224,238,1) 100%);
     text-align: left;
     font-size: 13px;
 }
