--- a/JS9-10/css/style.css
+++ b/JS9-10/css/style.css
@@ -47,8 +47,8 @@ body {
   position: absolute;
   left:-9999px;
   opacity: 0; 
-  color:#fff;
-  background:#303030;
+  color:green;
+  background:red;
   text-decoration:none;
   padding: 0px;
   width: 130%;
