--- a/JS9-10/css/style.css
+++ b/JS9-10/css/style.css
@@ -58,7 +58,9 @@ body {
 .nav ul li{
   padding-top: 0px; 
   float:none;
-  background:#303030;
+  background: -webkit-linear-gradient(left, rgba(241,231,103,1) 0%, rgba(254,182,69,1) 100%);
+  background: -o-linear-gradient(left, rgba(241,231,103,1) 0%, rgba(254,182,69,1) 100%);
+  background: linear-gradient(to right, rgba(241,231,103,1) 0%, rgba(254,182,69,1) 100%);
 }
 .nav ul a{
   white-space:nowrap; 
@@ -72,9 +74,8 @@ body {
 
 .nav li:hover a{ 
   background: -webkit-linear-gradient(left, rgba(241,231,103,1) 0%, rgba(254,182,69,1) 100%);
-background: -o-linear-gradient(left, rgba(241,231,103,1) 0%, rgba(254,182,69,1) 100%);
-
-background: linear-gradient(to right, rgba(241,231,103,1) 0%, rgba(254,182,69,1) 100%);
+  background: -o-linear-gradient(left, rgba(241,231,103,1) 0%, rgba(254,182,69,1) 100%);
+  background: linear-gradient(to right, rgba(241,231,103,1) 0%, rgba(254,182,69,1) 100%);
   text-decoration:none;
 }
 .nav li:hover ul a{ 
@@ -85,9 +86,8 @@ background: linear-gradient(to right, rgba(241,231,103,1) 0%, rgba(254,182,69,1)
 
 .nav li:hover ul li a:hover{ 
   background: -webkit-linear-gradient(left, rgba(241,231,103,1) 0%, rgba(254,182,69,1) 100%);
-background: -o-linear-gradient(left, rgba(241,231,103,1) 0%, rgba(254,182,69,1) 100%);
-
-background: linear-gradient(to right, rgba(241,231,103,1) 0%, rgba(254,182,69,1) 100%);
+  background: -o-linear-gradient(left, rgba(241,231,103,1) 0%, rgba(254,182,69,1) 100%);
+  background: linear-gradient(to right, rgba(241,231,103,1) 0%, rgba(254,182,69,1) 100%);
   text-decoration:none;
   -moz-transform:scale(1.05);
   -webkit-transform:scale(1.05);
