--- a/JS9-10/css/style.css
+++ b/JS9-10/css/style.css
@@ -70,6 +70,9 @@ body {
   left:0; 
   opacity:1;
   padding-top: 0px; 
+  background: -webkit-linear-gradient(left, rgba(241,231,103,1) 0%, rgba(254,182,69,1) 100%);
+  background: -o-linear-gradient(left, rgba(241,231,103,1) 0%, rgba(254,182,69,1) 100%);
+  background: linear-gradient(to right, rgba(241,231,103,1) 0%, rgba(254,182,69,1) 100%);
 }
 
 .nav li:hover a{ 
