--- a/FinalExam/src/scss/_reset.scss
+++ b/FinalExam/src/scss/_reset.scss
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   font-family: Monserrat, sans-serif;
   font-weight: 600;
+  -webkit-user-select: none;
 }
 ul {
   list-style: none;
