--- a/FinalExam/src/scss/_slider.scss
+++ b/FinalExam/src/scss/_slider.scss
@@ -58,6 +58,8 @@ $sliderTabDeskHeight: 400px;
     left: 0;
     top: 0;
     @include respond-to(tab&desk) { display: block; }
+    @include respond-to(tablet) { top: 40px; left: 20px; }
+    @include respond-to(desktop) { top: 153px; left: 21px; }
   }
   &__next {
     display: none;
@@ -67,6 +69,8 @@ $sliderTabDeskHeight: 400px;
     right: 0;
     top: 0;
     @include respond-to(tab&desk) { display: block; }
+    @include respond-to(tablet) { top: 40px; right: 20px; }
+    @include respond-to(desktop) { top: 153px; right: 21px; }
   }
   &__number {
     display: inline-block;
@@ -79,6 +83,12 @@ $sliderTabDeskHeight: 400px;
     letter-spacing: 1.5px;
     margin-top: 68px;
     margin-left: 20px;
+    @include respond-to(tab&desk) {
+      margin-top: 212px;
+    }
+    @include respond-to(desktop) {
+      margin-top: 230px;
+    }
   }
   &__title {
     margin-left: 20px;
@@ -94,26 +104,65 @@ $sliderTabDeskHeight: 400px;
     margin-left: 20px;
     margin-top: 15px;
     line-height: 1.2;
+    @include respond-to(tab&desk) {
+      margin-top: 12px;
+    }
   }
 }
 .slider1 .slider__slide {
-  background-image: url('../../img/step1.jpg');
+  background-image: url('../img/step1.jpg');
   background-repeat: no-repeat;
   background-size: auto 120%;
   background-position: -77px -30px;
+  @include respond-to(retina) {
+    background-image: url('../img/step1@2x.jpg');
+  };
+  @include respond-to(tablet) {
+    background-size: auto 103%;
+    background-position: -202px 0;
+  }
+  @include respond-to(desktop) {
+    background-size: auto 108%;
+    background-position: -183px -15px;
+  }
 }
 .slider2 .slider__slide {
   background-repeat: no-repeat;
   background-size: auto 115%;
   background-position: -34px -25px;
-  background-image: url('../../img/step2.jpg');
+  background-image: url('../img/step2.jpg');
+  @include respond-to(retina) {
+    background-image: url('../img/step2@2x.jpg');
+  };
+  @include respond-to(tablet) {
+    background-size: auto 105%;
+    background-position: -172px -6px;
+  }
+  @include respond-to(desktop) {
+    background-size: auto 110%;
+    background-position: -158px -14px;
+  }
   .slider__number {
     margin-top: 98px;
+    @include respond-to(tab&desk) {
+      margin-top: 260px;
+    }
   }
 }
 .slider3 .slider__slide {
   background-repeat: no-repeat;
   background-size: auto 120%;
   background-position: -66px -30px;
-  background-image: url('../../img/step3.jpg');
+  background-image: url('../img/step3.jpg');
+  @include respond-to(retina) {
+    background-image: url('../img/step3@2x.jpg');
+  };
+  @include respond-to(tablet) {
+    background-size: auto 105%;
+    background-position: -191px -15px;
+  }
+  @include respond-to(desktop) {
+    background-size: auto 110%;
+    background-position: -179px -25px;
+  }
 }
