--- a/FinalExam/src/scss/style.scss
+++ b/FinalExam/src/scss/style.scss
@@ -7,36 +7,27 @@ $large: 940px;
 $red: #ff4e50;
 $black: #333333;
 
-body::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 768px;
-  height: 9999px;
-  z-index: 999;
-  background-image: url('../../URLAUBSGLÜCK_Landing_tablet.jpg');
-  background-size: 768px auto;
-  background-repeat: no-repeat;
-  opacity: 0.5;
-}
-
 //Media mixin
 @mixin respond-to($media) {
-  @if $media == mobile {
-    @media (max-width: $small) { @content; }
+  @if $media == retina {
+    @media only screen and (-Webkit-min-device-pixel-ratio: 1.5),
+    only screen and (-moz-min-device-pixel-ratio: 1.5),
+    only screen and (-o-min-device-pixel-ratio: 3/2),
+    only screen and (min-device-pixel-ratio: 1.5) { @content; }
   }
   @else if $media == tablet {
-    @media (min-width: $small + 1) and (max-width: $medium) { @content; }
+    @media (min-device-width: $small + 160) and (max-device-width: $medium) { @content; }
   }
   @else if $media == desktop {
-    @media (min-width: $medium + 1) { @content; }
+    @media (min-device-width: $medium + 1) { @content; }
   }
   @else if $media == tab&desk {
-    @media (min-width: $small + 1) { @content; }
+    @media (min-device-width: $small + 160) { @content; }
   }
 }
 
+@import "../img/sprites/_sprite.scss";
+@import "../img/@2x/_sprite@2x.scss";
 @import "fonts";
 @import "reset";
 @import "slider";
@@ -57,14 +48,15 @@ body::after {
 header {
   width: 100%;
   height: 540px;
-  background-image: url('../../img/logo.jpg');
+  background-image: url('../img/logo.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: -405px 0;
 
+  @include respond-to(retina) { background-image: url('../img/logo@2x.jpg') };
   @include respond-to(tab&desk) { height: 700px; }
   @include respond-to(tablet) {background-position: -337px 0;}
-  @include respond-to(desktop) {background-position: 0 0;}
+  @include respond-to(desktop) {background-position: -45px 0;}
 }
 .header {
   &__login-buttons {
@@ -79,6 +71,9 @@ header {
       margin-right: 41px;
       max-width: 180px;
       width: 162px;
+    }
+    @include respond-to(desktop) {
+      margin-right: 3px;
     }
   }
   &__login {
@@ -105,6 +100,9 @@ header {
       margin-top: 46px;
       margin-left: 40px;
      }
+    @include respond-to(desktop) {
+      margin-left: 0px;
+    }
   }
   &__subtitle {
     color: #fff;
@@ -170,11 +168,28 @@ header {
 //meet a partner
 .peoples {
   padding-top: 33px;
+  @include respond-to(tab&desk) {
+    padding-top: 96px;
+   }
+   .clearfix {
+     @include respond-to(tablet) {
+       margin: 0 auto;
+       width: 65%;
+       min-width: 485px;
+      }
+   }
   &__title {
     font-size: 21.98px;
     color: $black;
     text-align: center;
     margin-bottom: 14px;
+    @include respond-to(tab&desk) {
+      margin-bottom: 32px;
+     }
+  }
+  &__portrait {
+    width: 122px;
+    height: 122px;
   }
   &__portrait-wrapper {
     position: relative;
@@ -192,6 +207,24 @@ header {
     position: absolute;
     right: 0;
     bottom: 0;
+    height: 40px;
+    width: 40px;
+    &.tv{
+      @include sprite($sp-tv);
+      @include respond-to(retina) { @include sprite($sp-tv-2x); };
+    }
+    &.coffee{
+      @include sprite($sp-coffee);
+      @include respond-to(retina) { @include sprite($sp-coffee-2x); };
+    }
+    &.chemistry{
+      @include sprite($sp-chemistry);
+      @include respond-to(retina) { @include sprite($sp-chemistry-2x); };
+    }
+    &.airplane{
+      @include sprite($sp-airplane);
+      @include respond-to(retina) { @include sprite($sp-airplane-2x); };
+    }
   }
   &__name {
     font-size: 14px;
@@ -211,6 +244,36 @@ header {
   }
   &__partner {
     margin-bottom: 25px;
+    @include respond-to(tab&desk) {
+      float: left;
+      margin-bottom: 54px;
+      margin-right: 5.3%;
+     }
+    @include respond-to(tablet) {
+      width: 47%;
+    }
+    @include respond-to(desktop) {
+      width: 23.5%;
+      margin-right: 2%;
+      margin-bottom: -2px;
+    }
+    &:nth-of-type(2n) {
+      @include respond-to(tablet) {
+        float: left;
+        margin-bottom: 54px;
+        margin-right: 0px;
+       }
+    }
+    &:nth-of-type(n+2) {
+      @include respond-to(tablet) {
+        margin-bottom: 0;
+       }
+    }
+    &:last-of-type {
+      @include respond-to(desktop) {
+        margin-right: 0;
+      }
+    }
   }
 }
 #other-partners {
@@ -224,20 +287,34 @@ header {
   text-align: center;
   width: 92%;
   padding: 8px 0;
+  @include respond-to(tab&desk) {
+    margin-top: 33px;
+    max-width: 196px;
+   }
 }
 
 //discover holiday activity ideas
 .discover {
   padding-top: 34px;
   padding-bottom: 40px;
+  @include respond-to(tab&desk) {
+    padding-top: 96px;
+    padding-bottom: 100px;
+   }
   &__title {
     font-size: 22px;
     color: $black;
     text-align: center;
     margin-bottom: 13px;
+    @include respond-to(tab&desk) {
+      margin-bottom: 34px;
+     }
   }
   &__newImages {
     margin-top: 25px;
+    @include respond-to(tab&desk) {
+      margin-top: 75px;
+     }
   }
   &__text {
     font-family: Roboto, sans-serif;
@@ -249,6 +326,11 @@ header {
   }
   &__form {
     margin-top: 15px;
+    @include respond-to(tab&desk) {
+      display: block;
+      margin: 37px auto 0;
+      max-width: 410px;
+     }
   }
   &__tag {
     display: block;
@@ -259,6 +341,10 @@ header {
     font-family: Roboto, sans-serif;
     font-weight: 100;
     text-indent: 15px;
+    @include respond-to(tab&desk) {
+      max-width: 240px;
+      float: left;
+     }
   }
   &__submit {
     outline: none;
@@ -271,31 +357,71 @@ header {
     border-radius: 25px;
     height: 40px;
     font-size: 13.96px;
+    @include respond-to(tab&desk) {
+      max-width: 160px;
+      margin-top: 0;
+      float: right;
+     }
   }
 }
 footer {
+  padding-bottom: 40px;
   border-top: 4px solid $red;
   padding-top: 16px;
+  @include respond-to(tab&desk) {
+    padding-top: 35px;
+  }
+  @include respond-to(desktop) {
+    padding-top: 37px;
+  }
 }
 .footer__title {
   display: block;
   font-size: 16px;
   color: $red;
   text-align: center;
+  @include respond-to(tab&desk) {
+    float: left;
+    margin-left: 30px;
+  }
+  @include respond-to(desktop) {
+    margin-left: 0px;
+  }
 }
 .list {
   margin-top: 12px;
+  @include respond-to(tab&desk) {
+    float: left;
+    margin-top: 0;
+    margin-left: 90px;
+    margin-right: 14px;
+   }
+   @include respond-to(desktop) {
+     margin-left: 105px;
+     margin-right: -13px;
+   }
   &__title {
     color: $black;
     display: block;
     text-align: center;
     font-size: 14px;
+    @include respond-to(tab&desk) {
+      margin-bottom: 12px;
+     }
   }
   &__item {
     float: left;
     margin-right: 13px;
+    @include respond-to(tab&desk) {
+      font-size: 14px;
+      float: none;
+      margin-bottom: 5px;
+     }
     &:first-of-type {
       margin-left: 52px;
+      @include respond-to(tab&desk) {
+        margin-left: 0px;
+       }
     }
   }
   &__link {
@@ -310,12 +436,24 @@ footer {
 .designed {
   margin-top: 15px;
   padding-bottom: 18px;
+  @include respond-to(tab&desk) {
+    margin-top: 3px;
+    max-width: 120px;
+    margin-right: 29px;
+    float: right;
+   }
+   @include respond-to(desktop) {
+     margin-right: 0px;
+   }
   &by {
     display: block;
     font-size: 10px;
     color: #ccc;
     text-align: center;
     letter-spacing: 1.2px;
+    @include respond-to(tab&desk) {
+      margin-left: 28px;
+     }
   }
   img {
     display: block;
